ruwiki visibility fix of the table at https://ru.wikipedia.org/wiki/Википедия:Запросы_к_администраторам

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.14.15
+@version        1.14.16
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1203,6 +1203,11 @@ small[style='color:var(--color-subtle, #54595d);'], /* https://ru.wikipedia.org/
 .commonsuserbox td, /* Template User_autopatrolled https://commons.wikimedia.org/wiki/Template:User_autopatrolled */
 
 .ts-Userbox-main, /* https://ru.wikipedia.org/wiki/Шаблон:Userbox/Счётчик_файлов_Викисклад */
+
+/* https://ru.wikipedia.org/wiki/Википедия:Запросы_к_администраторам#Сообщить_о_спаме_или_вандализме */
+.tmpl-raaf-heading,
+.tmpl-raaf-comment,
+.tmpl-raaf-cell.is-user,
 
 .block-indent /* https://be.wikipedia.org/wiki/Вікіпедыя:Адказы_на_частую_крытыку */
 {
